apps/folio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: folio
  namespace: folio
spec:
  selector:
    app.kubernetes.io/name: folio
  ports:
    - name: http
      port: 80
      targetPort: http
